Begin returning response to POSTs, and individual GETs to link to
